[gd_scene load_steps=7 format=2]

[ext_resource path="res://jogador/nave.gd" type="Script" id=1]
[ext_resource path="res://projetil/projetil.tscn" type="PackedScene" id=2]
[ext_resource path="res://jogador/ship.png" type="Texture" id=3]
[ext_resource path="res://jogador/laser2.wav" type="AudioStream" id=4]
[ext_resource path="res://jogador/player_hit.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.3682, 16.0902 )

[node name="Nave" type="KinematicBody2D"]

position = Vector2( 507.736, 549.49 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
Projetil = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="Canhao" type="Position2D" parent="."]

position = Vector2( 0, -25 )
_sections_unfolded = [ "Transform", "Z" ]

[node name="TimerTiro" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="SomTiro" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 4 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SomDano" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


